# xbar-pr-status

./: .envrc  Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: ci.yml  update_nix.yml
src/: check_status.rs  main.rs  navigate_value.rs  pull_request.rs  pull_requests.graphql  xbar.rs
src/test_fixtures/: pr_approved.json  pr_approved_but_failing.json  pr_failing.json  pr_no_checks.json  pr_queued.json
