[package]
name = "xbar-pr-status"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Hicks <brian@brianthicks.com>" ]
description = "Format GitHub PRs for use in an xbar script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.9", features = [ "std", "color", "suggestions", "derive", "cargo", "wrap_help", "env" ] }
graphql_client = "0.10.0"
serde = "1.0.134"
