[package]
name = "xbar-pr-status"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Hicks <brian@brianthicks.com>" ]
description = "Format GitHub PRs for use in an xbar script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
chrono = "0.4.19"
clap = { version = "3.2.2", features = [ "std", "color", "suggestions", "derive", "cargo", "wrap_help", "env", "unstable-v4" ] }
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
serde = "1.0.140"
serde_json = "1.0.82"
