[package]
name = "xbar-pr-status"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Hicks <brian@brianthicks.com>" ]
description = "Format GitHub PRs for use in an xbar script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.18", features = [ "std", "color", "suggestions", "derive", "cargo", "wrap_help", "env" ] }
env_logger = "0.10.2"
log = "0.4.20"
reqwest = { version = "0.11.23", features = [ "blocking", "json" ] }
serde = "1.0.196"
serde_json = "1.0.111"
